# flutterup

./: Cargo.toml  LICENSE  README.md  meson.build
.github/workflows/: rust.yml
archlinux/: PKGBUILD
src/: clonetoolchain.rs  config.rs  constenv.rs  main.rs  wrapper.rs
