[package]
name = "flutterup"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.2.7"
once_cell = "1.17.1"
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
