[package]
name = "flutterup"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.1"
once_cell = "1.18.0"
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
