[package]
name = "flutterup"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
once_cell = "1.19.0"
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
